objects/TempTest__Google_Drive_File__c.object
<CustomObject   >
    <fields>
        <fullName>TempTest__Download_Url__c</fullName>
        <label>Download Url</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>TempTest__File_Name__c</fullName>
        <description>It is a file Name</description>
        <inlineHelpText>help text</inlineHelpText>
        <label>File Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TempTest__File_Size__c</fullName>
        <inlineHelpText>test file size</inlineHelpText>
        <label>File Size</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Google Drive File</label>
    <nameField>
        <label>Google Drive File Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Google Drive Files</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>